<?xml version="1.0"?>
<package>
  <name>mil_tasks</name>
  <version>0.0.0</version>
  <description>The mil_tasks package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kallen@todo.todo">kallen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>qt_gui.plugin</run_depend>
  <run_depend>ros_alarms</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
