<?xml version="1.0"?>
<package>
  <name>sub8_launch</name>
  <version>1.0.0</version>
  <description>The sub8_launch package</description>
  <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>