<?xml version="1.0"?>
<package>
  <name>sub8_missions</name>
  <version>1.0.0</version>
  <description>The sub8_missions package</description>
  <maintainer email="jpanikulam@ufl.edu">jacob</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sub8_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sub8_msgs</run_depend>
  <export>
  </export>
</package>