<package>
  <name>camera1394</name>
  <version>1.10.0</version>

  <description>
    ROS driver for devices supporting the IEEE 1394 Digital Camera
    (IIDC) protocol. Supports the ROS image_pipeline, using libdc1394
    for device access.
  </description>

  <author>Jack O'Quin</author>
  <author>Ken Tossell</author>
  <author>Patrick Beeson</author>
  <author>Nate Koenig</author>
  <author>Andrew Howard</author>
  <author>Damien Douxchamps</author>
  <author>Dan Dennedy</author>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/camera1394</url>
  <url type="bugtracker">https://github.com/ros-drivers/camera1394/issues</url>
  <url type="repository">https://github.com/ros-drivers/camera1394.git</url>

  <!-- broken under catkin:
  <review status="Doc Reviewed" notes="2010-01-22"/>
  <review status="Doc Reviewed" notes="2010-06-19"/>
  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libdc1394-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- this *should* be a test_depend -->
  <build_depend>rostest</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libdc1394-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <nodelet plugin="${prefix}/camera1394_nodelet.xml"/>
  </export>

</package>
